feat: add responsive design to basket page

--- a/eCommerce-Application/src/styles/components/_buttons.scss
+++ b/eCommerce-Application/src/styles/components/_buttons.scss
@@ -187,9 +187,14 @@
 
     &--basket {
         width: fit-content;
+
+        padding: 1em;
+
+        font-weight: bold;
+        text-align: center;
+
         background-color: var(--color-primary);
         color: var(--color-secondary);
-        font-weight: bold;
     }
 
     &--item {
