fix: change loader color, change btn(next page) height

--- a/eCommerce-Application/src/styles/components/_buttons.scss
+++ b/eCommerce-Application/src/styles/components/_buttons.scss
@@ -131,6 +131,10 @@
         }
     }
 
+    &_store {
+        height: 3.5rem;
+    }
+
     &_un-action {
         background-color: var(--color-secondary);
         color: var(--color-input);
