fix: fix basket's page responsive design

--- a/eCommerce-Application/src/styles/base/_typography.scss
+++ b/eCommerce-Application/src/styles/base/_typography.scss
@@ -455,6 +455,7 @@
     &__name {
         font-size: var(--fs-medium);
         text-align: center;
+        line-height: 1.7;
     }
 
     &__btn {
