--- a/eCommerce-Application/src/styles/layout/_header.scss
+++ b/eCommerce-Application/src/styles/layout/_header.scss
@@ -3,12 +3,10 @@
 .header {
     @include mixins.flex(null, center, flex-end);
 
-    padding: 1rem 2rem;
+    padding: 2rem;
 
     @include mixins.respond-to('tablet') {
         justify-content: flex-start;
-
-        padding: 2rem 2rem;
     }
 }
 
