--- a/eCommerce-Application/src/styles/layout/_product.scss
+++ b/eCommerce-Application/src/styles/layout/_product.scss
@@ -275,7 +275,7 @@
         }
 
         &-btns {
-            @include mixins.flex(null, center, stretch);
+            @include mixins.flex(null, flex-start, stretch);
             flex-wrap: wrap;
         }
 
