--- a/eCommerce-Application/src/styles/pages/_store.scss
+++ b/eCommerce-Application/src/styles/pages/_store.scss
@@ -145,7 +145,7 @@
         width: 80%;
 
         @include mixins.respond-to('tablet') {
-            width: 22rem;
+            width: fit-content;
         }
     }
 
