--- a/eCommerce-Application/src/styles/pages/_cart.scss
+++ b/eCommerce-Application/src/styles/pages/_cart.scss
@@ -384,6 +384,7 @@
 .no-cart {
     @include mixins.flex(column, center, center);
     margin-bottom: 4rem;
+    padding-top: 2rem;
 
     @include mixins.respond-to('tablet') {
         margin-bottom: 10rem;
