--- a/eCommerce-Application/src/styles/components/_modal.scss
+++ b/eCommerce-Application/src/styles/components/_modal.scss
@@ -45,30 +45,21 @@
     }
 
     &_order {
-        width: 50rem;
-        height: 80%;
+        --gap: 1rem;
         @include mixins.flex(column, center, center);
+        width: min(50rem, 90%);
+
+        padding: 2rem;
 
         color: var(--color-black);
         background-color: var(--color-primary);
 
-        font-family: var(--ff-product);
-        font-weight: bold;
+        @include mixins.respond-to('tablet') {
+            --gap: 1.4rem;
+        }
 
         &__img_done {
-            width: 10rem;
-        }
-
-        &__img_cart {
-            width: 30rem;
-        }
-
-        h2 {
-            font-size: var(--fs-medium-big);
-        }
-
-        p {
-            font-size: var(--fs-medium);
+            width: min(10rem, 20%);
         }
     }
 
