fix: final fix mentors comments and filters behaviour

--- a/eCommerce-Application/src/styles/pages/_store.scss
+++ b/eCommerce-Application/src/styles/pages/_store.scss
@@ -41,7 +41,7 @@
     }
 
     &__navigation {
-        @include mixins.flex(null, null, null);
+        @include mixins.flex(null, flex-end, null);
     }
 
     &__pages {
