fix: README.md, animations transition

--- a/eCommerce-Application/src/styles/abstracts/_animations.scss
+++ b/eCommerce-Application/src/styles/abstracts/_animations.scss
@@ -93,3 +93,15 @@
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     }
 }
+
+@keyframes move {
+    0% {
+        translate: 0 0;
+    }
+    50% {
+        translate: 0 1rem;
+    }
+    100% {
+        translate: 0 0;
+    }
+}
