--- a/eCommerce-Application/src/styles/components/_buttons.scss
+++ b/eCommerce-Application/src/styles/components/_buttons.scss
@@ -234,6 +234,8 @@
     img {
         height: 1.5rem;
 
+        animation: move 1.4s infinite forwards;
+
         @include mixins.respond-to('tablet') {
             height: auto;
         }
